--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add"
+        android:contentDescription="Create Note"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
